[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Switch/Switch.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Switch/SwitchEmission.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Props/Switch.gd" type="Script" id=3]
[ext_resource path="res://Sounds/switch-sound.mp3" type="AudioStream" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D emission_texture;
uniform vec4 glow_color : hint_color = vec4(1.0);
uniform float emission_amount : hint_range(0, 10);

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	vec4 emission_color = texture(emission_texture, UV);
	vec3 emission = glow_color.rgb * emission_amount;
	
	if(emission_color.r > 0f) {
		COLOR = vec4(max(color.rgb, emission), color.a);
	} else {
		COLOR = color;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/glow_color = Color( 0.486275, 1, 0.0588235, 1 )
shader_param/emission_amount = 0.0
shader_param/emission_texture = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 69, 79.5 )

[node name="Switch" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
material = SubResource( 2 )
position = Vector2( 0, -64 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -79.5 )
shape = SubResource( 3 )

[node name="SwitchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
bus = "SFX"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
